--------------------------------------------------------------------------
---------                  Ampache -- CHANGELOG                  ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.3.3-Alpha2
	- Added From File: option to album art (Thx pb1dft)
	- Updated French Translation (Thx charrea)
	- Tweaked default config, Ratings are enabled by default
	- Added Genre link on show_songs along with some other minor UI
		improvements
	- Fixed Show All of Song Titles not having any data
	- Fixed override of local_length to 9000 regardless of config file
	- Tweaked Remeber Me Checkbox to be disabled if remember_length
		is <= local_length
	- Fixed issues with date not being set on insert of stats
	- Fixed style issue on Single Album view when ratings are off
	- Added Democratic Play ability, UI incomplete and 'clunky'
	- Added some extra error checking to the install process
	- Fixed issue with delete confirmation on playlist always being 
		yes, even if you click no.
	- Added more error checking to install, won't let you continue 
		without a valid MySQL connection, rather then relying
		on the db_select() to fail
	- Fixed a session race condition if you turn use_auth off and on
		and a user log in while use_auth if off
	- Fixed a potential foreach error if no songs passed to stream
		now logs error and gently returns the user
	- Added ability for Admins to define the required permission level
		for individual preferences
	- Added WavPack support
	- Forced a sane Post Size had some people with 32 byte post sizes
		which will not work with Ampache. 
	- Fixed a logic error with the MPD controller.
	- Fixed a problem were invalid bitrates below the set downsample
		bitrate could cause lame to crash as they weren't 
		validated. 
	- Added XSPF Flash player, rough around the edges but it works
		(Thx pb1dft/GrinningArmor)